# xf86-video-v4l

./: .gitignore  .gitlab-ci.yml  ChangeLog  README  autogen.sh  configure.ac
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  03-code-cleanup.yml  04-doc-update.yml  05-org-task.yml
.github/workflows/: build.yml
man/: Makefile.am  v4l.man
src/: Makefile.am  v4l.c  videodev.h  videodev2.h
